Update Client and add tests
