# src/Unlocked.Api/Endpoints/GetLockById.cs
@@ -17,7 +17,7 @@ public static class GetLockById
 
     private class LockItem
     {
-        public required LockStatus Status { get; set; }
+        public required LockStatus LockStatus { get; set; }
 
         [JsonIgnore(Condition = JsonIgnoreCondition.WhenWritingNull)]
         public string? Location { get; set; }
@@ -27,9 +27,19 @@ public static class GetLockById
         Guid lockId
     )
     {
+        if (lockId == Guid.Empty)
+        {
+            return TypedResults.NotFound(new ProblemDetails
+            {
+                Status = StatusCodes.Status404NotFound,
+                Title = "Lock not found",
+                Detail = "The lock with the specified ID was not found."
+            });
+        }
+
         return TypedResults.Ok(new LockItem
         {
-            Status = LockStatus.Unlocked
+            LockStatus = LockStatus.Unlocked
         });
     }
 }
